Fixed issue with button on desktop being squished

--- a/css/quaytest.css/Event4.aspx.less
+++ b/css/quaytest.css/Event4.aspx.less
@@ -25,3 +25,9 @@
     background-color: @button-color;
     .action-button();
 }
+
+.selectTickets .buttonsContainer .button>a {
+    @media @desktop {
+        min-width: 200px;
+    }
+}
